Fix: Switch to create React App deployment

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rescue-team",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://manian-kanthi-m.github.io/rescue-team",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
